--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.5.12",
+  "version": "0.5.13",
   "name": "games",
   "description": "Complex web application of party-games",
   "scripts": {
@@ -9,37 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "^0.37.4",
-    "@auth/prisma-adapter": "^2.7.4",
-    "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "^6.1.0",
-    "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
+    "@auth/core": "^0.39.0",
+    "@auth/prisma-adapter": "^2.9.0",
+    "@hookform/resolvers": "^5.0.1",
+    "@prisma/client": "^6.7.0",
+    "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "ms": "^2.1.3",
-    "next": "~15.1.3",
-    "next-auth": "5.0.0-beta.25",
+    "next": "~15.3.1",
+    "next-auth": "5.0.0-beta.27",
     "nextjs-google-adsense": "^1.0.0",
     "nextjs-google-analytics": "^2.3.7",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-canvas-confetti": "^2.0.7",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-hot-toast": "^2.4.1",
-    "react-textarea-autosize": "^8.5.6",
-    "sharp": "^0.33.5",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.1",
+    "react-hot-toast": "^2.5.2",
+    "react-textarea-autosize": "^8.5.9",
+    "sharp": "^0.34.1",
     "the-new-css-reset": "^1.11.3",
-    "zod": "^3.24.1"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/ms": "^0.7.34",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "~15.1.3",
-    "prisma": "^6.1.0",
-    "sass": "^1.83.0",
-    "typescript": "^5.7.2"
+    "@types/ms": "^2.1.0",
+    "@types/node": "^22.15.3",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
+    "eslint": "^9.25.1",
+    "eslint-config-next": "~15.3.1",
+    "prisma": "^6.7.0",
+    "sass": "^1.87.0",
+    "typescript": "^5.8.3"
   }
 }
