--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Environment
+NODE_ENV=
+
 # Google Services
 NEXT_PUBLIC_ADSENSE_PUBLISHER_ID="[YOUR_KEY]"
 NEXT_PUBLIC_GA_MEASUREMENT_ID="[YOUR_KEY]"
