--- a/.env.example
+++ b/.env.example
@@ -2,28 +2,30 @@
 NODE_ENV=
 
 # Google Services
-NEXT_PUBLIC_ADSENSE_PUBLISHER_ID="[YOUR_KEY]"
-NEXT_PUBLIC_GA_MEASUREMENT_ID="[YOUR_KEY]"
+NEXT_PUBLIC_GA_MEASUREMENT_ID=
+NEXT_PUBLIC_ADSENSE_PUBLISHER_ID=
 
 # Prisma Database
-POSTGRES_USER="[YOUR_USER]"
-POSTGRES_PASSWORD="[YOUR_PASSWORD]"
-POSTGRES_DB="[YOUR_DB]"
-DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+DB_HOST=
+DB_PORT=
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}
 
 # Auth.js Config
-NEXTAUTH_SECRET="[YOUR_SECRET]"
-NEXTAUTH_URL="[YOUR_URL]"
+NEXTAUTH_SECRET=
+NEXTAUTH_URL=
 
 # Auth.js Providers
-AUTH_GOOGLE_ID="[YOUR_ID]"
-AUTH_GOOGLE_SECRET="[YOUR_SECRET]"
+AUTH_GOOGLE_ID=
+AUTH_GOOGLE_SECRET=
 
-AUTH_FACEBOOK_ID="[YOUR_ID]"
-AUTH_FACEBOOK_SECRET="[YOUR_SECRET]"
+AUTH_FACEBOOK_ID=
+AUTH_FACEBOOK_SECRET=
 
-AUTH_GITHUB_ID="[YOUR_ID]"
-AUTH_GITHUB_SECRET="[YOUR_SECRET]"
+AUTH_GITHUB_ID=
+AUTH_GITHUB_SECRET=
 
-AUTH_DISCORD_ID="[YOUR_ID]"
-AUTH_DISCORD_SECRET="[YOUR_SECRET]"
+AUTH_DISCORD_ID=
+AUTH_DISCORD_SECRET=
