--- a/package.json
+++ b/package.json
@@ -1,44 +1,53 @@
 {
+  "version": "0.6.1",
   "name": "games",
-  "version": "0.6.0",
+  "description": "",
   "private": true,
+  "author": "Jakub Kłało <kubaklalo@gmail.com>",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "format": "pnpm exec prettier . --write",
+    "format:check": "pnpm exec prettier . --check",
+    "validate": "pnpm run lint && pnpm run format:check"
   },
   "dependencies": {
-    "@auth/core": "^0.39.0",
-    "@auth/prisma-adapter": "^2.9.0",
-    "@hookform/resolvers": "^5.0.1",
-    "@prisma/client": "^6.7.0",
-    "axios": "^1.9.0",
-    "bcryptjs": "^3.0.2",
+    "@auth/core": "^0.34.3",
+    "@auth/prisma-adapter": "^2.11.1",
+    "@hookform/resolvers": "^5.2.2",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.0.0",
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "ms": "^2.1.3",
-    "next": "15.3.1",
-    "next-auth": "5.0.0-beta.27",
+    "next": "~15.5.9",
+    "next-auth": "5.0.0-beta.30",
     "nextjs-google-adsense": "^1.0.0",
     "nextjs-google-analytics": "^2.3.7",
-    "react": "^19.1.0",
+    "react": "~19.1.4",
     "react-canvas-confetti": "^2.0.7",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.1",
-    "react-hot-toast": "^2.5.2",
+    "react-dom": "~19.1.4",
+    "react-hook-form": "^7.69.0",
+    "react-hot-toast": "^2.6.0",
     "react-textarea-autosize": "^8.5.9",
     "the-new-css-reset": "^1.11.3",
-    "zod": "^3.24.3"
+    "zod": "~3.25.76"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/eslintrc": "^3.3.3",
     "@types/ms": "^2.1.0",
-    "@types/node": "^22.15.3",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.3",
-    "eslint": "^9.26.0",
-    "eslint-config-next": "15.3.1",
-    "prisma": "^6.7.0",
-    "sass": "^1.87.0",
-    "typescript": "^5.8.3"
+    "@types/node": "~22.19.3",
+    "@types/react": "~19.2.7",
+    "@types/react-dom": "~19.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "~15.5.9",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "^3.7.4",
+    "prisma": "^7.0.0",
+    "sass": "^1.97.1",
+    "typescript": "^5.9.3"
   }
 }
