--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "version": "0.6.1",
+  "version": "0.6.2",
   "name": "games",
-  "description": "",
+  "description": "Browser versions of popular party games and TV quiz shows as interactive boards",
   "private": true,
   "author": "Jakub Kłało <kubaklalo@gmail.com>",
   "scripts": {
@@ -19,7 +19,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.0.0",
+    "@prisma/client": "^7.2.0",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "ms": "^2.1.3",
@@ -27,9 +27,10 @@
     "next-auth": "5.0.0-beta.30",
     "nextjs-google-adsense": "^1.0.0",
     "nextjs-google-analytics": "^2.3.7",
-    "react": "~19.1.4",
+    "pg": "^8.16.3",
+    "react": "~19.2.3",
     "react-canvas-confetti": "^2.0.7",
-    "react-dom": "~19.1.4",
+    "react-dom": "~19.2.3",
     "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
     "react-textarea-autosize": "^8.5.9",
@@ -46,7 +47,7 @@
     "eslint-config-next": "~15.5.9",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.7.4",
-    "prisma": "^7.0.0",
+    "prisma": "^7.2.0",
     "sass": "^1.97.1",
     "typescript": "^5.9.3"
   }
