--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: sh -c "npx prisma migrate deploy && pnpm start"
+    env_file:
+      - .env
+    command: sh -c "npx prisma generate && npx prisma migrate deploy && pnpm start"
     ports:
       - "${PORT}:3000"
     volumes:
