prisma DATABASE_URL env param

--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,10 @@ NEXT_PUBLIC_ADSENSE_PUBLISHER_ID=
 # Prisma Database
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-POSTGRES_DB=
 DB_HOST=
 DB_PORT=
-DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}
+POSTGRES_DB=
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}
 
 # Auth.js Config
 NEXTAUTH_SECRET=
