--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,14 @@ services:
   games:
     container_name: games
     restart: always
+    env_file:
+      - .env
     build:
       context: .
       dockerfile: Dockerfile
-    env_file:
-      - .env
-    command: sh -c "npx prisma generate && npx prisma migrate deploy && pnpm start"
+      args:
+        DATABASE_URL: ${DATABASE_URL}
+    command: sh -c "pnpm exec prisma migrate deploy && pnpm start"
     ports:
       - "${PORT}:3000"
     volumes:
