--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^7.2.0",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "dotenv": "^17.2.3",
     "ms": "^2.1.3",
     "next": "~15.5.9",
     "next-auth": "5.0.0-beta.30",
